# iwise

./: .gitignore  README.md  constantes.py  modelo.py  principal.py  pyproject.toml  traducciones.py
datos/: IWISE2020_LatinAmerica.dta
geografía/: geografía.py
geografía/mapas/guatemala/: departamentos_gtm_fin.shx
