[tool.poetry]
name = "iwise"
version = "0.1.0"
description = ""
authors = ["julienmalard <julien.malard@mail.mcgill.ca>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.3.3"
pymc = "^5.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
